Added parallelism; Minor fixes; Turned ON headless mode

--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -2,6 +2,6 @@ base_url=https://www.saucedemo.com/
 standard_login=standard_user
 password=secret_sauce
 browser=chrome
-headless=false
+headless=true
 maximize=true
 timeout=15
