setup remote test run

--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -5,3 +5,6 @@ browser=chrome
 headless=true
 maximize=true
 timeout=15
+remote_server=false
+remote_server_url=https://USER_NAME:ACCESS_TOKEN@hub-cloud.browserstack.com/wd/hub
+remote_server_platform=Windows 11
